# parse-bank-statement

./: README.md  pyproject.toml
notebooks/: draftspace.ipynb
parse_bank_statement/: aggregate.py  read.py
scripts/: files_analysis.py
tests/: test_aggregate.py  test_read.py
