[tool.poetry]
name = "parse-bank-statement"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymupdf = "^1.23.7"
jupyterlab = "^4.0.9"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
numpy = "^1.26.2"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
